@@ -1,4 +1,6 @@
 DIST google-perftools-1.3.tar.gz 1120884 RMD160 eaf7827eba6307783a13aabb29bce318ffe5cf3b SHA1 fcf5b13a377bbea486b6fe32a8d2cac61c0afa51 SHA256 5f3acc39151094a4aca560fc63ca69ce438015d42a814fb1f5fe1ce3796a98c7
+DIST google-perftools-1.4.tar.gz 1155625 RMD160 e760384be31a4c60acb70b6306e6a9aded96b03e SHA1 1f96130420fe31347f6aa201ed76dfcf6e5d4286 SHA256 5c4b3bd18b87296bdbe6a49987ffeb084fa7ca305de4bf06d578901829927e82
 EBUILD google-perftools-1.3.ebuild 574 RMD160 004a198f552dfd969d3b72f62f05995f899b8a0b SHA1 771c0f0bfcfab14b3a01909bdd0eeeae2ba1a1ec SHA256 935b43da1dd01810f8a3c3f8cb6863a5f1d43d5bea4f077eb2b3ba5afb179f27
-MISC ChangeLog 342 RMD160 68ed5856819c25012bb88bb8f139e8f116c855fa SHA1 4bd3bb62e1e0e270bb6680b376c3af9d4f51588e SHA256 4e74f9c6d9aee471c87a822b2d974c04b0b74e67d8cd4edeabd545699b005d01
+EBUILD google-perftools-1.4.ebuild 753 RMD160 564f734d3ccaf473a414676beeee041b6603fa6e SHA1 df12ce1586ca7b2e1b09eb61ed5903aa63fd2c79 SHA256 6cc2b449339e6d900e8f0af68bc5c1af697613e3c7280ca5e7e257bba80850a0
+MISC ChangeLog 449 RMD160 5fc0d03feef0f67da08ee206fcece2bc659d13a3 SHA1 e421a1942c3d1934e92f782f11f9c323b3a58ef9 SHA256 e1f9723dfab60f10210bf4858a1b995ddbc018594b88853c175ae8aa934ebe14
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
