@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +google-perftools-1.4.ebuild:
+  new version ebuild
+
   05 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   google-perftools-1.3.ebuild:
   add ~amd64
